manifest/objects/PreSale_Broadcast__e.object
<CustomObject>
    <description>This platform event is intended to fire when there is Early Implementation required for a client and the data needs to be synced into LCRM</description>
    <fields>
        <fullName>Account_GUID__c</fullName>
        <label>Account GUID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_GUID__c</fullName>
        <label>Opportunity GUID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload_Action__c</fullName>
        <label>Payload Action</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Id__c</fullName>
        <label>Quote Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <label>Quote Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PreSale Broadcast</label>
    <pluralLabel>PreSale Broadcasts</pluralLabel>
</CustomObject>